# autohack

./: .flake8  .gitignore  .style.yapf  Dockerfile  LICENSE  README.md  experiment1.py  main.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.github/workflows/: build.yml
config/: port-scans.toml  service-scans.toml  universal-patterns.toml
src/: artemis_hunter  autohack  autohack_webscan
src/autohack_config/: os-discovery.toml  port-scans.toml  service-scans.toml  universal-patterns.toml
tests/utils/: test_alpha_to_int_function.py  test_extract_matching_string_function.py  test_get_chart.py  test_get_lock_function.py  test_get_site_packages_function.py  test_natural_keys_function.py  test_process_safe_print_function.py  test_should_run_command_function.py
