[metadata]
name = artemis-hunter
version = 0.1
author = Hadron Davinci
description = This package does automated vulnerability enumeration and recommends exploits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudouser2010/artemis
project_urls =
    Bug Tracker = https://github.com/sudouser2010/artemis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.14

[options.packages.find]
where = src